@@ -18,6 +18,7 @@ VERSION 2.4.2-Beta 1
       reduce the number of cache-related crashes.
 
   BUGFIXES:
+    * Fixed playlist tooltip getting too tall for multiline comments. (BR 256038)
     * Made equalizer keywords (dB,kHz,...) translatable. (BR 263572)
     * Made equalizer preset names translatable. (BR 263596)
     * Fixed runtime error reporting of scripts. (BR 207409)
